--- a/static/synth/index.html
+++ b/static/synth/index.html
@@ -6,33 +6,61 @@
 <!-- <script src="jquery&#45;3.6.0.min.js"></script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <style>
+    * {
+        box-sizing: border-box;
+    }
+    html, body {
+        background: #0a0a0a;
+        color: #b0b0b0;
+        min-height: 100%;
+        margin: 0;
+        padding: 0;
+    }
     body {
-      font-family: 'Courier New', monospace;
+        font-family: 'Courier New', monospace;
+        padding: 30px;
+    }
+    h1 {
+        color: #00ff88;
+        text-shadow: 0 0 10px rgba(0, 255, 136, 0.5);
+        margin-bottom: 25px;
     }
     .oscillator {
         border-radius: 5px;
-        border: 2px solid teal;
+        border: 2px solid #00ff88;
         padding: 20px;
         display: inline-block;
+        background: #0f0f0f;
+        color: #e0e0e0;
+        margin: 5px;
+    }
+    .oscillator .frequency {
+        color: #00ffff;
+        font-weight: bold;
     }
     .selected {
-        background: yellow;
+        background: #151515;
+        box-shadow: 0 0 15px rgba(0, 255, 136, 0.4);
+        border-color: #00ffff;
     }
     .oscState {
         display: inline-block;
         width: 40%;
         text-align: center;
         border-radius: 5px;
-        background: green;
-        color: lightblue;
+        background: #00ff88;
+        color: #0a0a0a;
+        font-weight: bold;
+        padding: 3px 0;
     }
     .oscState.muted {
-        background: darkred;
+        background: #333;
+        color: #606060;
     }
 
     #oscillators {
         margin: 0px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         padding: 0px;
         display: inline-block;
     }
@@ -40,9 +68,12 @@
     .controls_help {
         display: inline-block;
         border-radius: 5px;
-        border: 3px solid black;
-        background: lightgrey;
-        padding: 10px;
+        border: 1px solid #333;
+        background: #0f0f0f;
+        padding: 15px;
+        color: #b0b0b0;
+        vertical-align: top;
+        margin: 5px;
     }
     .controls_help ul {
         display: inline-block;
@@ -57,15 +88,47 @@
         float: left;
     }
     .controls_help li.btn {
-        border-radius: 5px;
-        border: 3px solid black;
+        border-radius: 4px;
+        border: 1px solid #ffaa00;
+        background: #1a1a1a;
+        color: #ffaa00;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        min-width: 30px;
+        text-align: center;
+    }
+    .controls_help li.btn:hover {
+        box-shadow: 0 0 8px rgba(255, 170, 0, 0.5);
+        background: #252525;
     }
     .pressed {
-        background: olive;
+        background: #ffaa00 !important;
+        color: #0a0a0a !important;
+        box-shadow: 0 0 10px rgba(255, 170, 0, 0.6) !important;
+    }
+
+    /* Scanline effect */
+    body::before {
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        background: repeating-linear-gradient(
+            0deg,
+            rgba(0, 0, 0, 0.05),
+            rgba(0, 0, 0, 0.05) 1px,
+            transparent 1px,
+            transparent 2px
+        );
+        z-index: 9999;
     }
 </style>
 </head>
 <body>
+<h1>Web Synthesizer_</h1>
 <div id="oscillators">
     <span class="oscillator">
         Frequency: <span class="frequency"></span>
