--- a/static/synth/inline.html
+++ b/static/synth/inline.html
@@ -3,35 +3,45 @@
     .synth_inline_body {
       font-family: 'Courier New', monospace;
       background: #0a0a0a;
-      color: #0f0;
-      padding: 10px;
+      color: #b0b0b0;
+      padding: 15px;
+      border-radius: 5px;
+      border: 1px solid #1a1a1a;
     }
     .oscillator {
         border-radius: 5px;
-        border: 2px solid #0f0;
+        border: 2px solid #00ff88;
         padding: 20px;
         display: inline-block;
-        background: #111;
+        background: #0f0f0f;
+        color: #e0e0e0;
+    }
+    .oscillator .frequency {
+        color: #00ffff;
+        font-weight: bold;
     }
     .selected {
-        background: #1a1a1a;
-        box-shadow: 0 0 10px #0f0;
+        background: #151515;
+        box-shadow: 0 0 15px rgba(0, 255, 136, 0.4);
+        border-color: #00ffff;
     }
     .oscState {
         display: inline-block;
         width: 40%;
         text-align: center;
         border-radius: 5px;
-        background: #0a0;
-        color: #000;
+        background: #00ff88;
+        color: #0a0a0a;
+        font-weight: bold;
     }
     .oscState.muted {
-        background: #600;
+        background: #333;
+        color: #606060;
     }
 
     #oscillators {
         margin: 0px;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
         padding: 0px;
         display: inline-block;
     }
@@ -39,10 +49,12 @@
     .controls_help {
         display: inline-block;
         border-radius: 5px;
-        border: 2px solid #0f0;
-        background: #111;
-        padding: 10px;
-        color: #0f0;
+        border: 1px solid #333;
+        background: #0f0f0f;
+        padding: 12px;
+        color: #b0b0b0;
+        vertical-align: top;
+        margin: 5px;
     }
     .controls_help ul {
         display: inline-block;
@@ -57,18 +69,23 @@
         float: left;
     }
     .controls_help li.btn {
-        border-radius: 5px;
-        border: 2px solid #0f0;
+        border-radius: 4px;
+        border: 1px solid #ffaa00;
         background: #1a1a1a;
-        color: #0f0;
+        color: #ffaa00;
         cursor: pointer;
+        transition: all 0.2s ease;
+        min-width: 30px;
+        text-align: center;
     }
     .controls_help li.btn:hover {
-        box-shadow: 0 0 5px #0f0;
+        box-shadow: 0 0 8px rgba(255, 170, 0, 0.5);
+        background: #252525;
     }
     .pressed {
-        background: #0f0 !important;
-        color: #000 !important;
+        background: #ffaa00 !important;
+        color: #0a0a0a !important;
+        box-shadow: 0 0 10px rgba(255, 170, 0, 0.6) !important;
     }
 </style>
 <div class="synth_inline_body">
